Changed file extension on header files from .hpp to .h.
There was a reason I was using the .hpp extension but because I can no longer remember it and typing .hpp was annoying me, I just switched to .h.

I think everything works with the changed extension, though I only did basic testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21.0)
 
 project(cryptoCurrency)
 
-file(GLOB cryptoCurrency_SRC CONFIGURE_DEPENDS "src/*.hpp" "src/*.cpp")
+file(GLOB cryptoCurrency_SRC CONFIGURE_DEPENDS "src/*.h" "src/*.cpp")
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
